modified the post

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Time: "https://time.is/zh/"
     - Xiangqi: "https://www.chessdb.cn/query/"
-    - Tooleyes: "https://www.tooleyes.com/"
+    - Books: "https://annas-archive.org/"
     - More...: "moresource"
   Publications: "publication"
   About Me: "aboutme"
